	- Added advanced page-browsing tabs to threads
	- Added notes field to the user VN list
	- Added vnlists.status filter to /u+/list
	- Pass VN tag filters by ID rather than name
	- Improved VN tag filter selection with a dynamic HTML list of selected tags
	- Don't send 'tagspoil' filter when 'tag_inc' isn't active
	- Don't allow page > 100 or sorting on username or title on tag link browser

2.15 - 2010-12-15
	- Removed expand/collapse from history browser and /u+/posts and switched to
	  a combined view
	- Added a "general discussions" board
	- Added vote listings for VNs and users (/[uv]+/votes)
	- Keep track of last modification date for tag<->vn links
	- Added advanced tag link browser
	- Removed specific tags-by-user listing
	- Disable "Don't update last modified field" by default for mods
	- Make Multi not report posts
	- Consider "senpai" and "sempai" the same in the VN search
	- Extracted screen resolution strings from the code
	- API: Allow extra whitespace after "get .." command
	- API: Allow non-numbers as "clientver" for the login command
	- API: Added "image_nsfw" member to "get vn"
	- API: Added "results" option to the "get .. {}"
	- API: Increased the maximum number of results for the "get" command to 25
	- API: Added "orig_lang" member and filter to the "get vn .." command
	- API: Throttle the commands and sqltime per IP instead of per user
	- API: Removed the limit on the number of open sessions per user
	- API: Allow the API to be used without logging in with a username/password
	- d11: Various documentation fixes and improvements

2.14 - 2010-11-28
	- Improved filter selection interface for the release and VN browser
	- New release filters: voiced, animation and original language
	- New VN filters: length, "has anime" and original language
	- Apply search query and filters when changing first char
	- Added Atom feeds for the recent announcements, changes and posts
	  (located in /www/feeds and updated every 15 min. by Multi::Feed)